{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 26,
  "lineage": "0dedf69d-59a6-48dc-ade0-7176df5d4153",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kapten",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:security-group/sg-0dfb76daee3936b0b",
            "description": "Kapten Step Functions tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfb76daee3936b0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "basic-tasks-20251007213750822800000003",
            "name_prefix": "basic-tasks-",
            "owner_id": "576127390344",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-tasks-sg"
            },
            "tags_all": {
              "Name": "basic-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-027eb2850a8b61707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kapten"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kapten_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3814836399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0dfb76daee3936b0b",
            "security_group_rule_id": "sgr-01f17dccc3ef93a5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kapten",
            "aws_vpc.kapten"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kapten_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3297311973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0dfb76daee3936b0b",
            "security_group_rule_id": "sgr-01f17dccc3ef93a5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kapten",
            "aws_vpc.kapten"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kapten",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:subnet/subnet-01845a1b33a4639a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01845a1b33a4639a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576127390344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-subnet-01"
            },
            "tags_all": {
              "Name": "basic-subnet-01"
            },
            "vpc_id": "vpc-027eb2850a8b61707"
          },
          "dependencies": [
            "aws_vpc.kapten",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:subnet/subnet-06bbe49fdff1089c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbe49fdff1089c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576127390344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-subnet-02"
            },
            "tags_all": {
              "Name": "basic-subnet-02"
            },
            "vpc_id": "vpc-027eb2850a8b61707"
          },
          "dependencies": [
            "aws_vpc.kapten",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kapten",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc/vpc-027eb2850a8b61707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b67d4a77562fa087",
            "default_route_table_id": "rtb-0ba6ee5224b067a37",
            "default_security_group_id": "sg-09e7eb2bde2c2bae4",
            "dhcp_options_id": "dopt-0c1b9c11d18db5888",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027eb2850a8b61707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba6ee5224b067a37",
            "owner_id": "576127390344",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc"
            },
            "tags_all": {
              "Name": "basic-vpc"
            }
          }
        }
      ]
    }
  ]
}